--- a/Clients/package.json
+++ b/Clients/package.json
@@ -21,11 +21,13 @@
     "@mui/x-charts": "^8.4.0",
     "@mui/x-date-pickers": "^7.29.4",
     "@platejs/basic-nodes": "^49.0.0",
+    "@platejs/basic-styles": "^49.0.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@svgr/rollup": "^8.1.0",
     "@tiptap/react": "^2.8.0",
     "@tiptap/starter-kit": "^2.8.0",
     "@udecode/plate": "^48.0.5",
+    "@udecode/plate-common": "^41.0.13",
     "@udecode/plate-serializer-html": "^21.5.1",
     "@udecode/zustood": "2.0.0",
     "@uppy/core": "^4.2.3",
